--- a/list_table.html
+++ b/list_table.html
@@ -7,7 +7,7 @@
     <title>List and Table</title>
 </head>
 
-<body>
+<body style="background-color:orange;">
     <h1>List in HTML are ordered(ol) and unordered(ul) list(li)</h1>
     <ul type="disk"> <!-- disc,square,circle-->
         <li> This is a first unordered list</li>
